Code update after pr review & checkstyle changes